--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
     <title>PROXIMA</title>
 </head>
 
-<body class="bg-red-800">
-    <div class="p-4 bg-gray-200 flex">
-        <p class="text-lg font-bold text-blue-500">Hello, Tailwind CSS!</p>
-    </div>
-
+<body>
+    <!-- barre de navigation -->
+    <nav>
+        <div class="nav__container px-20 py-7 flex justify-between items-center">
+            <div class="logo">
+                <img src="/public/logo.svg" alt="">
+            </div>
+            <div class="menu-item flex items-center">
+                <ul class="flex gap-4">
+                    <li class="text-white">Accueil</li>
+                    <li class="text-white"></li>
+                    <li class="text-white">Fonctionnalités</li>
+                    <li class="text-white">FAQ</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 
 </html>
