add auth-buttons to navbar

--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 
 <body>
     <!-- barre de navigation -->
-    <nav>
+    <nav class="nav">
         <div class="nav__container px-20 py-7 flex justify-between items-center">
             <div class="logo">
                 <img src="/public/logo.svg" alt="">
             </div>
             <div class="menu-item flex items-center">
-                <ul class="flex gap-4">
+                <ul class="flex gap-6">
                     <li class="text-white">Accueil</li>
                     <li class="text-white"></li>
                     <li class="text-white">Fonctionnalités</li>
                     <li class="text-white">FAQ</li>
                 </ul>
+            </div>
+            <div class="auth-buttons flex gap-3 items-center">
+                <button class="text-white px-6 py-3">Se connecter</button>
+                <button class="text-white px-6 py-3 rounded-full">Nous rejoindre</button>
             </div>
         </div>
     </nav>
