--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </nav>
 
     <!-- section hero -->
-    <section class="hero w-full overflow-hidden h-screen flex flex-col gap-10 justify-center items-center">
+    <section
+        class="hero w-full overflow-hidden h-screen flex flex-col gap-10 justify-center items-center         <!-- bg-[url('/public/hero-bg.png')] bg-cover bg-no-repeat bg-center">
         <!-- hero bg -->
-        <img src="/public/hero-bg.png" class="absolute top-30 h-screen w-screen object-cover opacity-75 z-20" />
-        <!-- bg-[url('/public/hero-bg.png')] bg-cover bg-no-repeat bg-center -->
+        <!-- <img src="/public/hero-bg.png" class="absolute top-30 h-screen w-screen object-cover opacity-75 z-20" /> -->
         <div class="header relative z-50 flex flex-col gap-7 items-center">
             <h1 class="text-white lato-black text-center leading-tight">L'espace conquis ! <span>Voyagez</span> vers les
                 étoiles !
