--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
 
     <!-- section hero -->
     <section
-        class="hero w-full overflow-hidden h-screen flex flex-col gap-10 justify-center items-center         <!-- bg-[url('/public/hero-bg.png')] bg-cover bg-no-repeat bg-center">
-        <!-- hero bg -->
-        <!-- <img src="/public/hero-bg.png" class="absolute top-30 h-screen w-screen object-cover opacity-75 z-20" /> -->
+        class="hero w-full overflow-hidden h-screen flex flex-col gap-10 justify-center items-center bg-[url('/public/hero-bg.png')] bg-cover bg-no-repeat bg-center">
         <div class="header relative z-50 flex flex-col gap-7 items-center">
+            <div class="tag">
+                <p class="flex"><img src="/public/flare.svg" class="mr-2" />Intégration de notre IA pour vous assister <span
+                        class="ml-2 lato-medium text-white flex gap-1 items-center">Discuter <img
+                            src="/public/arrow-right.svg" alt=""></span></p>
+            </div>
             <h1 class="text-white lato-black text-center leading-tight">L'espace conquis ! <span>Voyagez</span> vers les
                 étoiles !
             </h1>
@@ -48,6 +51,14 @@
             <button class="text-white px-6 py-3 rounded-full">Nous rejoindre</button>
             <button class="text-white px-6 py-3 rounded-full">Nous contacter</button>
         </div>
+    </section>
+
+    <!-- section about -->
+    <section class="about flex py-24">
+        <div class="earth w-3/5">
+            <img src="/public/earth.png" alt="" />
+        </div>
+        <div class="about-content"></div>
     </section>
 </body>
 
