add button to features-header

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- section about -->
     <section
-        class="about flex items-center gap-24 py-24 px-20 bg-[url('/public/star.png')] bg-cover bg-no-repeat bg-center">
+        class="about flex items-center gap-24 pt-24 px-20 bg-[url('/public/star.png')] bg-cover bg-no-repeat bg-center">
         <div class="earth w-2/5">
             <img src="/public/earth.png" class="w-full h-full object-contain" />
         </div>
@@ -80,6 +80,23 @@
             </div>
             <button class="text-white px-6 py-3 rounded-full">
                 Nos fonctionnalités
+            </button>
+        </div>
+    </section>
+
+    <!-- section fonctionnalités -->
+    <section
+        class="features w-full h-max overflow-hidden flex flex-col gap-10 py-24 px-20 justify-center items-start bg-[url('/public/features-bg.png')] bg-cover bg-no-repeat bg-center">
+        <div class="header w-full flex justify-between items-end">
+            <div class="title flex flex-col gap-7">
+                <div class="tag">
+                    <p class="flex">Fonctionnalités</p>
+                </div>
+                <h2 class="text-white text-5xl lato-bold leading-tight">Nos fonctionnalités à votre <span
+                        class="lato-black">services</span></h2>
+            </div>
+            <button class="text-white px-6 py-3 rounded-full flex items-center gap-2">
+                Nos fonctionnalités <img src="/public/arrow-right.svg" alt="">
             </button>
         </div>
     </section>
