addcards to features-content

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <!-- section fonctionnalités -->
     <section
-        class="features w-full h-max overflow-hidden flex flex-col gap-10 py-24 px-20 justify-center items-start bg-[url('/public/features-bg.png')] bg-cover bg-no-repeat bg-center">
+        class="features w-full h-max overflow-hidden flex flex-col gap-10 py-24 px-28 justify-center items-start bg-[url('/public/features-bg.png')] bg-cover bg-no-repeat bg-center">
         <div class="header w-full flex justify-between items-end">
             <div class="title flex flex-col gap-7">
                 <div class="tag">
@@ -98,6 +98,24 @@
             <button class="text-white px-6 py-3 rounded-full flex items-center gap-2">
                 Nos fonctionnalités <img src="/public/arrow-right.svg" alt="">
             </button>
+        </div>
+        <div class="content w-full">
+            <div class="container grid grid-cols-3 gap-x-10 gap-y-12">
+                <div
+                    class="card col-span bg-[url('/public/features-card1.png')]  h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
+
+                </div>
+                <div
+                    class="card col-span-2 bg-[url('/public/features-card2.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
+                </div>
+                <div
+                    class="card col-span-2 bg-[url('/public/features-card3.png')]  h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
+
+                </div>
+                <div
+                    class="card  bg-[url('/public/features-card4.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
+                </div>
+            </div>
         </div>
     </section>
 </body>
