fix features-card col

--- a/index.html
+++ b/index.html
@@ -100,22 +100,26 @@
             </button>
         </div>
         <div class="content w-full">
-            <div class="container grid grid-cols-3 gap-x-10 gap-y-12">
+            <div class="container grid grid-cols-5 gap-x-10 gap-y-12">
                 <div
-                    class="card col-span bg-[url('/public/features-card1.png')]  h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
-
+                    class="card col-span-2 bg-[url('/public/features-card1.png')] bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
+                    <div class="card__content">
+                        <h3 class="text-white text-2xl font-bold">Authentification par reconnaissance faciale</h3>
+                        <p>Utilisez notre application en toute sécurité en vous authentifiant par reconnaissance faciale
+                        </p>
+                    </div>
                 </div>
                 <div
-                    class="card col-span-2 bg-[url('/public/features-card2.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
+                    class="card col-span-3 bg-[url('/public/features-card2.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
                 </div>
                 <div
-                    class="card col-span-2 bg-[url('/public/features-card3.png')]  h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
-
+                    class="card col-span-5 bg-[url('/public/features-card3.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
                 </div>
                 <div
-                    class="card  bg-[url('/public/features-card4.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
+                    class="card col-span-5 bg-[url('/public/features-card4.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
                 </div>
             </div>
+
         </div>
     </section>
 </body>
