add features-card adn fix child-2 width

--- a/index.html
+++ b/index.html
@@ -110,7 +110,12 @@
                     </div>
                 </div>
                 <div
-                    class="card col-span-3 bg-[url('/public/features-card2.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
+                    class="card col-span-3 bg-[url('/public/features-card2.png')]  bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
+                    <div class="card__content">
+                        <h3 class="text-white text-2xl font-bold">Visualisation en 3D de l’ espace et les planètes</h3>
+                        <p>Profitez s’ une visualisation en 3D de l’espace et les planètes y compris , emerveillez vous!
+                        </p>
+                    </div>
                 </div>
                 <div
                     class="card col-span-5 bg-[url('/public/features-card3.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
