add content to features-card

--- a/index.html
+++ b/index.html
@@ -118,10 +118,20 @@
                     </div>
                 </div>
                 <div
-                    class="card col-span-5 bg-[url('/public/features-card3.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
+                    class="card col-span-3 bg-[url('/public/features-card3.png')]  bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
+                    <div class="card__content">
+                        <h3 class="text-white text-2xl font-bold">Proposition de casules et diverses destinations</h3>
+                        <p>Nous vous proposons diverses capsules et avons diversifiés les destinations selon vos besoins
+                        </p>
+                    </div>
                 </div>
                 <div
-                    class="card col-span-5 bg-[url('/public/features-card4.png')] h-80 bg-cover bg-no-repeat bg-center rounded-xl overflow-hidden">
+                    class="card col-span-2 bg-[url('/public/features-card4.png')] bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
+                    <div class="card__content">
+                        <h3 class="text-white text-2xl font-bold">Assistance IA avec Chatbtot intégré</h3>
+                        <p>Nous avons intégré un Intelligence Artificielle, il vous assistera dans vos tracas
+                        </p>
+                    </div>
                 </div>
             </div>
 
