--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
     </section>
 
     <!-- footer -->
-    <footer>
-        <div class="footer_first px-16 py-5 flex justify-between">
+    <footer class="px-16 pb-7 flex flex-col gap-8">
+        <div class="footer_first flex justify-between">
             <div class="logo">
                 <img src="/public/logo.svg" alt="">
             </div>
