--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 Nos fonctionnalités <img src="/public/arrow-right.svg" alt="">
             </button>
         </div>
-        <div class="content w-full">
+        <div class="content w-full mt-">
             <div class="container grid grid-cols-5 gap-x-10 gap-y-12">
                 <div
                     class="card col-span-2 bg-[url('/public/features-card1.png')] bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
