add responsive to about

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 
     <!-- section about -->
     <section
-        class="about hidden flex items-center gap-24 pt-24 px-20 bg-[url('/public/star.png')] bg-cover bg-no-repeat bg-center">
-        <div class="earth w-2/5">
+        class="about flex flex-col lg:flex-row items-center gap-24 pt-20 md:pt-24 px-10 md:px-16 lg:px-20 bg-[url('/public/star.png')] bg-cover bg-no-repeat bg-center">
+        <div class="earth hidden lg:flex lg:w-2/5">
             <img src="/public/earth.png" class="w-full h-full object-contain" />
         </div>
-        <div class="about-content w-3/5 flex flex-col items-start gap-10">
+        <div class="about-content w-full lg:w-3/5 flex flex-col items-start gap-10">
             <div class="header flex flex-col gap-7">
                 <div class="tag">
                     <p class="flex">A propos</p>
                 </div>
-                <h2 class="text-white text-5xl lato-bold">Parlons un peu de <span class="lato-black">Proxima</span></h2>
+                <h2 class="text-white text-3xl md:text-4xl lg:text-5xl lato-bold">Parlons un peu de <span class="lato-black">Proxima</span></h2>
             </div>
-            <div class="content">
-                <p class="text-lg w-11/12">
+            <div class="content w-full">
+                <p class="lg:text-lg w-full lg:w-11/12">
                     <span class="lato-bold text-white">Proxima</span> est une application révolutionnaire qui vous
                     permet de voyager vers les
                     étoiles. Nous
