add responsive to about

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section
         class="hero w-full md:h-screen lg:h-auto overflow-hidden flex flex-col gap-10 pt-20 pb-32 md:py-40 px-8 md:px-16 lg:px-0 justify-center items-center bg-[url('/public/hero-bg.png')] bg-cover bg-no-repeat bg-center md:bg-center">
         <div class="header relative z-50 flex flex-col gap-7 items-center w-full md:w-max">
-            <div class="tag">
+            <div class="tag tag-hero">
                 <p class="flex"><img src="/public/flare.svg" class="mr-2 hidden md:flex" />Intégration de notre IA pour
                     vous assister
                 </p>
@@ -65,7 +65,8 @@
                 <div class="tag">
                     <p class="flex">A propos</p>
                 </div>
-                <h2 class="text-white text-3xl md:text-4xl lg:text-5xl lato-bold">Parlons un peu de <span class="lato-black">Proxima</span></h2>
+                <h2 class="text-white text-3xl md:text-4xl lg:text-5xl lato-bold">Parlons un peu de <span
+                        class="lato-black">Proxima</span></h2>
             </div>
             <div class="content w-full">
                 <p class="lg:text-lg w-full lg:w-11/12">
