add responsive to features

--- a/index.html
+++ b/index.html
@@ -87,49 +87,52 @@
 
     <!-- section fonctionnalités -->
     <section
-        class="features hidden w-full h-max overflow-hidden flex flex-col gap-10 py-24 px-28 justify-center items-start bg-[url('/public/features-bg.png')] bg-cover bg-no-repeat bg-center">
+        class="features w-full h-max overflow-hidden flex flex-col gap-10 pt-20 md:pt-24 px-10 md:px-16 lg:px-20 justify-center items-start bg-[url('/public/features-bg.png')] bg-cover bg-no-repeat bg-center">
         <div class="header w-full flex justify-between items-end">
             <div class="title flex flex-col gap-7">
                 <div class="tag">
                     <p class="flex">Fonctionnalités</p>
                 </div>
-                <h2 class="text-white text-5xl lato-bold leading-tight">Nos fonctionnalités à votre <span
-                        class="lato-black">services</span></h2>
+                <h2 class="text-white text-3xl md:text-4xl lg:text-5xl lato-bold lg:leading-tight">Nos fonctionnalités à
+                    votre <span class="lato-black">services</span></h2>
             </div>
             <button class="text-white px-6 py-3 rounded-full flex items-center gap-2">
                 Nos fonctionnalités <img src="/public/arrow-right.svg" alt="">
             </button>
         </div>
         <div class="content w-full mt-">
-            <div class="container grid grid-cols-5 gap-x-10 gap-y-12">
+            <div class="container grid md:grid-cols-4 lg:grid-cols-5 gap-x-10 gap-y-12">
                 <div
-                    class="card col-span-2 bg-[url('/public/features-card1.png')] bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
+                    class="card  md:col-span-2 lg:col-span-2 bg-[url('/public/features-card1.png')]  bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
                     <div class="card__content flex flex-col gap-3">
-                        <h3 class="text-white text-2xl font-bold">Authentification par reconnaissance faciale</h3>
+                        <h3 class="text-white  text-xl lg:text-2xl font-bold">Authentification par reconnaissance
+                            faciale</h3>
                         <p>Utilisez notre application en toute sécurité en vous authentifiant par reconnaissance faciale
                         </p>
                     </div>
                 </div>
                 <div
-                    class="card col-span-3 bg-[url('/public/features-card2.png')]  bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
+                    class="card md:col-span-2 lg:col-span-3 bg-[url('/public/features-card2.png')]  bg-cover md:bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
                     <div class="card__content flex flex-col gap-3">
-                        <h3 class="text-white text-2xl font-bold">Visualisation en 3D de l’ espace et les planètes</h3>
+                        <h3 class="text-white  text-xl lg:text-2xl  font-bold">Visualisation en 3D de l’ espace et les
+                            planètes</h3>
                         <p>Profitez s’ une visualisation en 3D de l’espace et les planètes y compris , emerveillez vous!
                         </p>
                     </div>
                 </div>
                 <div
-                    class="card col-span-3 bg-[url('/public/features-card3.png')]  bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
+                    class="card md:col-span-2 lg:col-span-3 bg-[url('/public/features-card3.png')]   bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
                     <div class="card__content flex flex-col gap-3">
-                        <h3 class="text-white text-2xl font-bold">Proposition de capsules et diverses destinations</h3>
+                        <h3 class="text-white  text-xl lg:text-2xl  font-bold">Proposition de capsules et diverses
+                            destinations</h3>
                         <p>Nous vous proposons diverses capsules et avons diversifiés les destinations selon vos besoins
                         </p>
                     </div>
                 </div>
                 <div
-                    class="card col-span-2 bg-[url('/public/features-card4.png')] bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
+                    class="card md:col-span-2 bg-[url('/public/features-card4.png')]  bg-cover bg-center bg-no-repeat rounded-xl overflow-hidden p-8 flex items-end">
                     <div class="card__content">
-                        <h3 class="text-white text-2xl font-bold">Assistance IA avec Chatbtot intégré</h3>
+                        <h3 class="text-white  text-xl lg:text-2xl  font-bold">Assistance IA avec Chatbtot intégré</h3>
                         <p>Nous avons intégré un Intelligence Artificielle, il vous assistera dans vos tracas
                         </p>
                     </div>
